health calulation metrics 3

--- a/hotel&users/health-calculation.mdx
+++ b/hotel&users/health-calculation.mdx
@@ -47,6 +47,7 @@ Cuando un hotel se integra por primera vez al sistema, comienza con una puntuaci
 | Mes 2+       | Totalmente operativo        | Mantenimiento regular, monitoreo continuo |
 
 Este enfoque de línea base garantiza que las nuevas propiedades comiencen con una evaluación justa mientras el sistema aprende las condiciones específicas de la propiedad y sus patrones de mantenimiento.
+
 ---
 ## Cálculo de Salud por Nivel
 
@@ -54,10 +55,10 @@ Este enfoque de línea base garantiza que las nuevas propiedades comiencen con u
 **Cálculo:**
 - Puntuación base: 100 puntos
 - Se aplican penalizaciones según:
-  - Condición del elemento (ej: "fuera de servicio" = -40, "requiere mantenimiento" = -25)
-  - Reportes activos (problemas críticos = -30, otros = -15)
-  - Fallas en lista de verificación (penalización base = 20 por falla)
-  - Mantenimiento atrasado (-2 puntos por día de atraso)
+  -> Condición del elemento (ej: "fuera de servicio" = -40, "requiere mantenimiento" = -25)
+  -> Reportes activos (problemas críticos = -30, otros = -15)
+  -> Fallas en lista de verificación (penalización base = 20 por falla)
+  -> Mantenimiento atrasado (-2 puntos por día de atraso)
 
 **Factores que afectan:**
 - Estado/condición del elemento
