health calulation metrics 4

--- a/hotel&users/health-calculation.mdx
+++ b/hotel&users/health-calculation.mdx
@@ -55,10 +55,10 @@ Este enfoque de línea base garantiza que las nuevas propiedades comiencen con u
 **Cálculo:**
 - Puntuación base: 100 puntos
 - Se aplican penalizaciones según:
-  -> Condición del elemento (ej: "fuera de servicio" = -40, "requiere mantenimiento" = -25)
-  -> Reportes activos (problemas críticos = -30, otros = -15)
-  -> Fallas en lista de verificación (penalización base = 20 por falla)
-  -> Mantenimiento atrasado (-2 puntos por día de atraso)
+  1. Condición del elemento (ej: "fuera de servicio" = -40, "requiere mantenimiento" = -25)
+  2. Reportes activos (problemas críticos = -30, otros = -15)
+  3. Fallas en lista de verificación (penalización base = 20 por falla)
+  4. Mantenimiento atrasado (-2 puntos por día de atraso)
 
 **Factores que afectan:**
 - Estado/condición del elemento
