health calulation metrics 5

--- a/hotel&users/health-calculation.mdx
+++ b/hotel&users/health-calculation.mdx
@@ -68,10 +68,10 @@ Este enfoque de línea base garantiza que las nuevas propiedades comiencen con u
 
 ### 2. Nivel de Espacio
 **Cálculo:**
-- Promedio ponderado de todos los elementos en el espacio (30% de peso)
-- Puntuación de mantenimiento basada en la antigüedad de la inspección (25% de peso)
-- Penalizaciones por reportes (35% de peso)
-- Impacto de la lista de verificación (10% de peso)
+- Promedio ponderado de todos los elementos en el espacio (30%)
+- Puntuación de mantenimiento basada en la antigüedad de la inspección (25%)
+- Penalizaciones por reportes (35%)
+- Impacto de la lista de verificación (10%)
 
 **Factores que afectan:**
 - Número y gravedad de reportes activos
