--- a/ai-tools/ai-inspecciones.mdx
+++ b/ai-tools/ai-inspecciones.mdx
@@ -1,45 +1,105 @@
 ---
-title: "Asistente AI · Inspecciones"
-description: "Genera inspecciones y listas de verificación basadas en la operación real de tu hotel."
+title: "SOP · Panel del Mecánico - Movo Novo"
+description: "Guía completa para la gestión de órdenes, diagnósticos y servicios en el panel del mecánico."
 ---
 
+## Procedimiento Operativo Estándar para el Panel del Mecánico
 
-# ¿Qué hace?
-<Info>
-Crea **inspecciones listas para usar** (habitaciones, áreas comunes, seguridad, alberca, cocina, etc.) y te sugiere **preguntas/puntos** según el historial y temporada.
-</Info>
+<Callout type="tip" title="🛠️ Próxima Evolución del Panel">
+  ¡Prepárate para la mejora! Este panel recibirá nuevas funcionalidades que transformarán tu flujo de trabajo. Estará listo el **13 de noviembre**. ¡La eficiencia nunca se detiene!
+</Callout>
 
+Este SOP describe las acciones que un mecánico realiza en la plataforma para gestionar sus órdenes, diagnósticos y servicios.
 
-## Beneficios
-- **Estandariza** checklists entre propiedades.
-- **Prioriza** puntos críticos (seguridad, experiencia del huésped).
-- **Acelera** la creación y asignación de inspecciones.
+### A. Acceso y Navegación
 
+<Steps titleSize="h3">
+  <Step title="Paso 1 · Acceso al Panel" icon="user-shield" iconType="solid" stepNumber={1}>
+    Accede al panel del mecánico con tus credenciales.
+    <ul>
+      <li>Ingresa a la plataforma de Movo Novo.</li>
+      <li>Selecciona **Iniciar Sesión**.</li>
+      <li>Ingresa tu correo y contraseña.</li>
+      <li>Verifica que tu rol sea `Mecánico`.</li>
+    </ul>
+  </Step>
 
-## Cómo usarlo
-<Steps>
-<Step title="1 · Abre AI Inspecciones" icon="clipboard-list" iconType="solid">
-En el menú, elige **AI Inspecciones**.
-</Step>
-<Step title="2 · Define el objetivo" icon="target" iconType="solid">
-Ejemplo: *“Inspección de salida de habitación 315”* o *“Ronda de lobby fin de semana”*.
-</Step>
-<Step title="3 · Personaliza preguntas" icon="list-checks" iconType="solid">
-Activa/desactiva puntos sugeridos y agrega los tuyos.
-</Step>
-<Step title="4 · Asigna y programa" icon="calendar" iconType="solid">
-Elige responsable y fecha. ¡Listo para ejecutar desde el móvil!
-</Step>
+  <Step title="Paso 2 · Navegación Principal" icon="compass" iconType="solid" stepNumber={2}>
+    Familiarízate con las secciones principales.
+    <ul>
+      <li>**Resumen de Servicios**: Vista general de órdenes.</li>
+      <li>**Órdenes Activas**: Lista de trabajos asignados.</li>
+      <li>**Historial**: Registro de servicios completados.</li>
+      <li>**Herramientas**: Acceso a diagnósticos y reportes.</li>
+    </ul>
+  </Step>
 </Steps>
 
+### B. Gestión y Actualización de Órdenes
 
-## Consejos
-<Tip>Usa nombres claros: *“Inspección Express de Check-out”* o *“Ronda de Seguridad Nocturna”.*</Tip>
-<Tip>Después de la primera semana, revisa qué puntos nadie marca y elimina ruido.</Tip>
+<Steps titleSize="h3">
+  <Step title="Paso 3 · Tomar y Asignar una Orden" icon="hand-paper" iconType="solid" stepNumber={3}>
+    Asigna una orden de la lista a tu perfil.
+    <ul>
+      <li>Navega a **Órdenes No Asignadas**.</li>
+      <li>Selecciona una orden.</li>
+      <li>Haz clic en **Tomar Orden**.</li>
+      <li>Confirma la asignación.</li>
+    </ul>
+  </Step>
 
+  <Step title="Paso 4 · Actualizar el Estado" icon="sync-alt" iconType="solid" stepNumber={4}>
+    Cambia el estado de una orden según el avance.
+    <ul>
+      <li>Abre la orden deseada.</li>
+      <li>Haz clic en **Cambiar Estado**.</li>
+      <li>Selecciona el nuevo estado: **En Revisión, En Progreso, Esperando Piezas, Listo para Entrega**.</li>
+      <li>Agrega comentarios si es necesario y guarda los cambios.</li>
+    </ul>
+  </Step>
+</Steps>
 
-## FAQ
-**¿Puedo reutilizar una inspección?** Sí, duplica y ajusta la programación.
+### C. Realización de Diagnósticos
 
+<Steps titleSize="h3">
+  <Step title="Paso 5 · Crear Diagnóstico" icon="clipboard-check" iconType="solid" stepNumber={5}>
+    Documenta los hallazgos para el cliente.
+    <ul>
+      <li>Abre la orden correspondiente.</li>
+      <li>Haz clic en **Nuevo Diagnóstico**.</li>
+      <li>Completa el formulario: Descripción, Piezas necesarias, Horas estimadas y Recomendaciones.</li>
+      <li>Adjunta fotos si es necesario y guarda el diagnóstico.</li>
+    </ul>
+  </Step>
+</Steps>
+
+### D. Finalización de Servicios
+
+<Steps titleSize="h3">
+  <Step title="Paso 6 · Cerrar Orden" icon="check-circle" iconType="solid" stepNumber={6}>
+    Completa el proceso de servicio y la entrega.
+    <ul>
+      <li>Verifica que todas las tareas estén completadas.</li>
+      <li>Actualiza el estado a **Listo para Entrega**.</li>
+      <li>Adjunta documentación final.</li>
+      <li>Notifica al cliente.</li>
+      <li>Marca como **Completado** tras la entrega.</li>
+    </ul>
+  </Step>
+</Steps>
 
 ---
+
+### Notas Importantes
+
+- **Organización**: Revisa regularmente las órdenes asignadas.
+- **Comunicación**: Mantén actualizado el estado de las órdenes.
+- **Documentación**: Adjunta fotos y notas detalladas.
+- **Tiempos**: Respeta los tiempos estimados de entrega.
+
+### Soporte Técnico
+
+Para asistencia con el panel del mecánico:
+- **Email de Soporte**: soporte@movo-novo.com
+- **WhatsApp de Soporte**: +52 55 1234 5678
+- **Horario de Atención**: Lunes a Viernes 9:00 - 18:00 hrs.
