--- a/ai-tools/ai-inspecciones.mdx
+++ b/ai-tools/ai-inspecciones.mdx
@@ -1,105 +1,8 @@
 ---
-title: "SOP · Panel del Mecánico - Movo Novo"
-description: "Guía completa para la gestión de órdenes, diagnósticos y servicios en el panel del mecánico."
+title: "Asistente AI · Inspecciones"
+description: "Genera inspecciones y listas de verificación basadas en la operación real de tu hotel."
 ---
 
-## Procedimiento Operativo Estándar para el Panel del Mecánico
-
-<Callout type="tip" title="🛠️ Próxima Evolución del Panel">
-  ¡Prepárate para la mejora! Este panel recibirá nuevas funcionalidades que transformarán tu flujo de trabajo. Estará listo el **13 de noviembre**. ¡La eficiencia nunca se detiene!
+<Callout type="tip" title="🛠️ Próximamente">
+  ¡Estará listo el **13 de noviembre**!
 </Callout>
-
-Este SOP describe las acciones que un mecánico realiza en la plataforma para gestionar sus órdenes, diagnósticos y servicios.
-
-### A. Acceso y Navegación
-
-<Steps titleSize="h3">
-  <Step title="Paso 1 · Acceso al Panel" icon="user-shield" iconType="solid" stepNumber={1}>
-    Accede al panel del mecánico con tus credenciales.
-    <ul>
-      <li>Ingresa a la plataforma de Movo Novo.</li>
-      <li>Selecciona **Iniciar Sesión**.</li>
-      <li>Ingresa tu correo y contraseña.</li>
-      <li>Verifica que tu rol sea `Mecánico`.</li>
-    </ul>
-  </Step>
-
-  <Step title="Paso 2 · Navegación Principal" icon="compass" iconType="solid" stepNumber={2}>
-    Familiarízate con las secciones principales.
-    <ul>
-      <li>**Resumen de Servicios**: Vista general de órdenes.</li>
-      <li>**Órdenes Activas**: Lista de trabajos asignados.</li>
-      <li>**Historial**: Registro de servicios completados.</li>
-      <li>**Herramientas**: Acceso a diagnósticos y reportes.</li>
-    </ul>
-  </Step>
-</Steps>
-
-### B. Gestión y Actualización de Órdenes
-
-<Steps titleSize="h3">
-  <Step title="Paso 3 · Tomar y Asignar una Orden" icon="hand-paper" iconType="solid" stepNumber={3}>
-    Asigna una orden de la lista a tu perfil.
-    <ul>
-      <li>Navega a **Órdenes No Asignadas**.</li>
-      <li>Selecciona una orden.</li>
-      <li>Haz clic en **Tomar Orden**.</li>
-      <li>Confirma la asignación.</li>
-    </ul>
-  </Step>
-
-  <Step title="Paso 4 · Actualizar el Estado" icon="sync-alt" iconType="solid" stepNumber={4}>
-    Cambia el estado de una orden según el avance.
-    <ul>
-      <li>Abre la orden deseada.</li>
-      <li>Haz clic en **Cambiar Estado**.</li>
-      <li>Selecciona el nuevo estado: **En Revisión, En Progreso, Esperando Piezas, Listo para Entrega**.</li>
-      <li>Agrega comentarios si es necesario y guarda los cambios.</li>
-    </ul>
-  </Step>
-</Steps>
-
-### C. Realización de Diagnósticos
-
-<Steps titleSize="h3">
-  <Step title="Paso 5 · Crear Diagnóstico" icon="clipboard-check" iconType="solid" stepNumber={5}>
-    Documenta los hallazgos para el cliente.
-    <ul>
-      <li>Abre la orden correspondiente.</li>
-      <li>Haz clic en **Nuevo Diagnóstico**.</li>
-      <li>Completa el formulario: Descripción, Piezas necesarias, Horas estimadas y Recomendaciones.</li>
-      <li>Adjunta fotos si es necesario y guarda el diagnóstico.</li>
-    </ul>
-  </Step>
-</Steps>
-
-### D. Finalización de Servicios
-
-<Steps titleSize="h3">
-  <Step title="Paso 6 · Cerrar Orden" icon="check-circle" iconType="solid" stepNumber={6}>
-    Completa el proceso de servicio y la entrega.
-    <ul>
-      <li>Verifica que todas las tareas estén completadas.</li>
-      <li>Actualiza el estado a **Listo para Entrega**.</li>
-      <li>Adjunta documentación final.</li>
-      <li>Notifica al cliente.</li>
-      <li>Marca como **Completado** tras la entrega.</li>
-    </ul>
-  </Step>
-</Steps>
-
----
-
-### Notas Importantes
-
-- **Organización**: Revisa regularmente las órdenes asignadas.
-- **Comunicación**: Mantén actualizado el estado de las órdenes.
-- **Documentación**: Adjunta fotos y notas detalladas.
-- **Tiempos**: Respeta los tiempos estimados de entrega.
-
-### Soporte Técnico
-
-Para asistencia con el panel del mecánico:
-- **Email de Soporte**: soporte@movo-novo.com
-- **WhatsApp de Soporte**: +52 55 1234 5678
-- **Horario de Atención**: Lunes a Viernes 9:00 - 18:00 hrs.
