--- a/ai-tools/ai-inspecciones.mdx
+++ b/ai-tools/ai-inspecciones.mdx
@@ -4,5 +4,6 @@ description: "Genera inspecciones y listas de verificación basadas en la operac
 ---
 
 <Callout type="tip" title="🛠️ Próximamente">
+🛠️ Próximamente 
   ¡Estará listo el **13 de noviembre**!
 </Callout>
