--- a/ai-tools/ai-textos.mdx
+++ b/ai-tools/ai-textos.mdx
@@ -4,5 +4,6 @@ description: "Crea mensajes, respuestas y contenido útil para tu hotel con IA, 
 ---
 
 <Callout type="tip" title="🛠️ Próximamente">
+🛠️ Próximamente 
   ¡Estará listo el **13 de noviembre**!
 </Callout>
